--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -1,3 +1,17 @@
+#boton{
+	width: 200px;
+	display: block;
+	margin: 10px auto;
+	height: 40px;
+	background-color: #1ABDBD;
+	color: white;
+}
+
+#boton:nth-of-type(3){
+	background-color: #5C0101;
+
+}
+
 .columna_principal{
 	display: -ms-flex;display: -webkit-flex;
 	display: flex;width: 100%;
@@ -28,10 +42,3 @@
 	margin: 5px;
 }
 
-#boton{
-	width: 200px;
-	display: block;
-	margin: 10px auto;
-	height: 40px;
-	background-color: #1ABDBD;
-}
